# kryptan_android

./: .gitignore  .gitmodules  AndroidManifest.xml  build.gradle  lint.xml
app/: CMakeLists.txt  build.gradle  test.c
app/src/androidTest/java/org/caelus/kryptanandroid/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/caelus/kryptanandroid/: GeneratePasswordDialog.java  Global.java  LabelAdapter.java  SecretAdapter.java  SecretDetailFragment.java  SecretListActivity.java  SecretListFragment.java  SelectLabelActivity.java  SyncronizeDesktopActivity.java
app/src/main/java/org/caelus/kryptanandroid/buildingblocks/: BaseAlert.java  ConflictChoice.java  KryptanKeyboard.java  SecureEditText.java  SecureTextView.java  TcpClient.java
app/src/main/java/org/caelus/kryptanandroid/core/: CorePwdFile.java  CoreSecureStringHandler.java
app/src/main/jni/kryptan_core/: CorePwdFile.cpp  CoreSecureStringHandler.cpp  helpers.cpp  helpers.h
app/src/main/jni/kryptan_core/cryptopp/: network.h  wait.h
app/src/main/res/drawable/: kryptantheme_btn_default_holo_dark.xml  kryptantheme_edit_text_holo_dark.xml  kryptantheme_progress_horizontal_holo_dark.xml  kryptantheme_progress_indeterminate_horizontal_holo_dark.xml  kryptantheme_scrubber_control_selector_holo_dark.xml  kryptantheme_scrubber_progress_horizontal_holo_dark.xml  progress_horizontal_kryptanactionbarstyle.xml
app/src/main/res/layout/: activity_select_label.xml  activity_syncronize_desktop.xml  dialog_change_master_key.xml  dialog_generate_password.xml  fragment_secret_list.xml  qustom_dialog_layout.xml  simple_list_item_activated_secure.xml
app/src/main/res/values/: styles.xml  styles_kryptanactionbarstyle.xml  styles_kryptantheme.xml  themes_kryptantheme.xml
app/src/main/res/values-large/: dimens.xml
app/src/main/res/values-xlarge/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: Application.mk
jni/cryptopp/: Android.mk  GNUmakefile-armeabi-android.patch  GNUmakefile-armeabi-v7a-android.patch  GNUmakefile-mips-android.patch  GNUmakefile-x86-android.patch  compile-all-targets.sh  compile-one-target.sh  recompile.sh  setenv-android.sh
jni/cryptopp/armeabi-v7a/: defines.txt
jni/cryptopp/mips/: defines.txt
jni/cryptopp/x86/: defines.txt
jni/kryptan_core/: Android.mk  CorePwd.cpp  CorePwdFile.cpp  CorePwdList.cpp  CoreSecureStringHandler.cpp  helpers.cpp  helpers.h
libs/armeabi/: gdb.setup
res/drawable/: ab_background_textured_kryptanactionbarstyle.xml  btn_cab_done_kryptanactionbarstyle.xml  kryptantheme_btn_check_holo_dark.xml  kryptantheme_btn_toggle_holo_dark.xml  selectable_background_kryptanactionbarstyle.xml  spinner_background_ab_kryptanactionbarstyle.xml  tab_indicator_ab_kryptanactionbarstyle.xml
res/layout/: activity_change_master_key.xml  activity_decrypt.xml  activity_edit_labels.xml  activity_generate_password.xml  activity_secret_detail.xml  activity_secret_list.xml  activity_secret_twopane.xml  activity_select_label.xml  activity_syncronize_desktop.xml  dialog_change_master_key.xml  dialog_generate_password.xml  edit_label_list_item.xml  edit_labels_dialog.xml  fragment_secret_detail.xml  fragment_secret_list.xml  kryptan_keyboard.xml  qustom_dialog_layout.xml  secure_text_edit.xml  simple_list_item_activated_secure.xml
res/menu/: decrypt.xml  global_menu.xml
res/values/: dimens.xml  strings.xml  strings_activity_decrypt.xml  strings_activity_settings.xml  styles.xml  styles_kryptanactionbarstyle.xml  styles_kryptantheme.xml  themes_kryptantheme.xml
res/values-sw600dp/: refs.xml
res/xml/: pref_headers.xml
signed-app/: kryptan_android.apk
src/com/qustom/dialog/: QustomDialogBuilder.java
src/org/caelus/kryptanandroid/: ChangeMasterKeyActivity.java  ChangeMasterKeyAlert.java  DecryptActivity.java  EditLabelAdapter.java  EditLabelsActivity.java  GeneratePasswordActivity.java  GeneratePasswordDialog.java  Global.java  LabelAdapter.java  OpenPasswordFileActivity.java  SecretAdapter.java  SecretDetailActivity.java  SecretDetailFragment.java  SecretListActivity.java  SecretListFragment.java  SelectLabelActivity.java  SettingsActivity.java  SyncAdapter.java  SyncronizeDesktopActivity.java
src/org/caelus/kryptanandroid/buildingblocks/: AutoRepeatButton.java  BaseAlert.java  ChangeMasterKeyAlert.java  ConflictChoice.java  EditLabelsAlert.java  KryptanKeyboard.java  SecureEditText.java  SecureTextView.java  SingleEditTextAlert.java  SyncItem.java  TcpClient.java
src/org/caelus/kryptanandroid/core/: CoreKryptanBaseException.java  CorePwd.java  CorePwdFile.java  CorePwdList.java  CoreSecureStringHandler.java  CoreSecureStringHandlerCollection.java
src/org/caelus/kryptanandroid/views/: SecureTextView.java
